--- a/stationmap.html
+++ b/stationmap.html
@@ -45,7 +45,28 @@
         }
         var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
-        
+        var flightPlanCoordinates = [
+          new google.maps.LatLng(34.0, -118.0),
+          new google.maps.LatLng(51.481330, 0.0)
+        ];
+        var flightPath = new google.maps.Polyline({
+          path: flightPlanCoordinates,
+          geodesic: true,
+          strokeColor: '#FF0000',
+          strokeOpacity: 1.0,
+          strokeWeight: 2
+        });
+
+        var coveragePath = new google.maps.Polyline({
+          path: flightPlanCoordinates,
+          geodesic: true,
+          strokeColor: '#FF0000',
+          strokeOpacity: 0.35,
+          strokeWeight: 200
+        });
+
+        flightPath.setMap(map);
+        coveragePath.setMap(map);
       }
 
       google.maps.event.addDomListener(window, 'load', initialize);
